@@ -96,15 +96,15 @@ public class AcLoadFlowFromCache {
         // Because of caching, we only need to switch back to working variant but not to remove the variant, thus
         // WorkingVariantReverter is used instead of DefaultVariantCleaner
         try (LfNetworkList lfNetworkList = Networks.loadWithReconnectableElements(network, topoConfig, acParameters.getNetworkParameters(),
-                LfNetworkList.WorkingVariantReverter::new, reportNode)) {
+                LfNetworkList.WorkingVariantReverter::new, reportNode, null)) {
             values = lfNetworkList.getList()
                     .stream()
                     .map(n -> new NetworkCache.AcLfValue(new AcLoadFlowContext(n, acParameters)))
-                    .collect(Collectors.toList());
+                    .toList();
             entry.setValues(values);
             LfNetworkList.VariantCleaner variantCleaner = lfNetworkList.getVariantCleaner();
             if (variantCleaner != null) {
-                entry.setTmpVariantId(variantCleaner.getTmpVariantId());
+                entry.setVariantCleaner(new LfNetworkList.DefaultVariantCleaner(network, entry.getWorkingVariantId(), variantCleaner.getTmpVariantId()));
             }
         }
         return values;
